# chchanges

./: .gitignore  LICENSE  README.md  pyproject.toml
chchanges/: bayesian_online.py
chchanges/demos/: mean.py  variance.py
chchanges/test/: test_bayesian_online.py
